# libmodbus_conan_json

./: CMakeLists.txt  README.md  ih_modbus_proxy.hpp  main.cpp  modbus_config_parser.hpp  modbus_proxy.cpp  modbus_proxy.hpp  modbus_scenario_handler.cpp
core/: CMakeLists.txt  modbus_proxy.hpp  modbus_proxy_types.hpp  modbus_scenario_handler.cpp  modbus_scenario_handler.hpp  utils.hpp
scenarios/: scenario.json
ui/: CMakeLists.txt  application_ui.cpp  application_ui.hpp
